--- a/index.html
+++ b/index.html
@@ -8,27 +8,31 @@
   </head>
   <body>
     <header class="header">
-      <div class="logo">Header Logo</div>
-      <nav>
-        <ul>
-          <li>Header link one</li>
-          <li>Header link two</li>
-          <li>Header link three</li>
-        </ul>
-      </nav>
+      <div class="header-content">
+        <div class="logo">Header Logo</div>
+        <nav>
+          <ul>
+            <li>Header link one</li>
+            <li>Header link two</li>
+            <li>Header link three</li>
+          </ul>
+        </nav>
+      </div>
     </header>
 
     <div class="hero">
-      <div class="hero-text">
-        <h1>This Website is awesome</h1>
-        <p>
-          This website has some subtext that goes here under main title. It's a
-          smaller font and the color is lower contrast
-        </p>
-        <button class="signup-button">Sign up</button>
-      </div>
-      <div class="hero-image">
-        <img src="" alt="this is a placeholder for a image" />
+      <div class="hero-content">
+        <div class="hero-text">
+          <h1>This Website is awesome</h1>
+          <p>
+            This website has some subtext that goes here under main title. It's
+            a smaller font and the color is lower contrast
+          </p>
+          <button class="signup-button">Sign up</button>
+        </div>
+        <div class="hero-image">
+          <img src="" alt="this is a placeholder for a image" />
+        </div>
       </div>
     </div>
 
