--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <link href="https://fonts.googleapis.com" rel="stylesheet">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Landing page</title>
@@ -37,6 +38,7 @@
     </div>
 
     <div class="random-information">
+      <div class="info-content">
       <h2>Some random information.</h2>
       <div class="card-container">
         <div class="card">
@@ -55,6 +57,7 @@
           <img src="" alt="card image 4" />
           <p>this is some subtext under an illustration or image</p>
         </div>
+      </div>
       </div>
     </div>
 
